// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/layout/main-wrapper/sidebar displays YouTube menu item if using YouTube 1`] = `
<nav id="sidebar" class="side side-nav showing">
  <section class="music">
    <h1>Your Music</h1>
    <ul class="menu">
      <li><a href="#!/home" class="home active">Home</a></li>
      <li><a href="#!/queue" class="queue">Current Queue</a></li>
      <li><a href="#!/songs" class="songs">All Songs</a></li>
      <li><a href="#!/albums" class="albums">Albums</a></li>
      <li><a href="#!/artists" class="artists">
          Artists
        </a></li>
      <li><a href="#!/youtube" class="youtube">
          YouTube Video
        </a></li>
    </ul>
  </section>
  <playlistlist-stub current-view="Home"></playlistlist-stub>
  <!---->
</nav>
`;

exports[`components/layout/main-wrapper/sidebar displays management menu items for admin 1`] = `
<nav id="sidebar" class="side side-nav showing">
  <section class="music">
    <h1>Your Music</h1>
    <ul class="menu">
      <li><a href="#!/home" class="home active">Home</a></li>
      <li><a href="#!/queue" class="queue">Current Queue</a></li>
      <li><a href="#!/songs" class="songs">All Songs</a></li>
      <li><a href="#!/albums" class="albums">Albums</a></li>
      <li><a href="#!/artists" class="artists">
          Artists
        </a></li>
      <li><a href="#!/youtube" class="youtube">
          YouTube Video
        </a></li>
    </ul>
  </section>
  <playlistlist-stub current-view="Home"></playlistlist-stub>
  <section class="manage">
    <h1>Manage</h1>
    <ul class="menu">
      <li><a href="#!/settings" class="settings">Settings</a></li>
      <li><a href="#!/upload" class="upload">Upload</a></li>
      <li><a href="#!/users" class="users">Users</a></li>
    </ul>
  </section>
</nav>
`;

exports[`components/layout/main-wrapper/sidebar displays new version info 1`] = `
<nav id="sidebar" class="side side-nav showing">
  <section class="music">
    <h1>Your Music</h1>
    <ul class="menu">
      <li><a href="#!/home" class="home active">Home</a></li>
      <li><a href="#!/queue" class="queue">Current Queue</a></li>
      <li><a href="#!/songs" class="songs">All Songs</a></li>
      <li><a href="#!/albums" class="albums">Albums</a></li>
      <li><a href="#!/artists" class="artists">
          Artists
        </a></li>
      <li><a href="#!/youtube" class="youtube">
          YouTube Video
        </a></li>
    </ul>
  </section>
  <playlistlist-stub current-view="Home"></playlistlist-stub>
  <section class="manage">
    <h1>Manage</h1>
    <ul class="menu">
      <li><a href="#!/settings" class="settings">Settings</a></li>
      <li><a href="#!/upload" class="upload">Upload</a></li>
      <li><a href="#!/users" class="users">Users</a></li>
    </ul>
  </section>
</nav>
`;
